# project-suiii

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.real-sync.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.playwright.json  vitest.config.ts
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_initial_phase4.py  72c6315c31e9_add_phase_5_progress_tracking.py  b8f2e1234c90_add_sprint_2_profile_preferences.py  c2b979c2de7e_align_model_indexes.py  d4f7b2c8a901_add_sync_changes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py  profile.py  progress.py  router.py  sync.py  test_control.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  body_measurement.py  daily_tracking.py  generated_report.py  meal_log.py  migration_batch.py  mixins.py  progress_milestone.py  progress_photo.py  sync_change.py  sync_device.py  sync_mutation.py  user.py  user_profile.py  user_session.py  weekly_check_in.py  workout_session.py
backend/app/schemas/: auth.py  profile.py  progress.py  sync.py
backend/app/scripts/: create_user.py
backend/app/services/: auth_service.py  photo_service.py  progress_service.py  report_service.py  sync_service.py
backend/tests/: test_phase4_structure.py  test_phase5_structure.py  test_sprint2_settings_structure.py  test_sync_migration.py
docs/: pwa.md  (+3 more)
(+143 files in other folders)
