[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-suiii-backend"
version = "0.1.0"
description = "Private Project SUIII FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pwdlib[argon2]>=0.2",
  "email-validator>=2.2",
  "python-multipart>=0.0.9",
  "pillow>=10.4",
  "reportlab>=4.2",
  "tzdata>=2024.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["alembic", "alembic.*", "tests", "tests.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
